--- a/css/style.css
+++ b/css/style.css
@@ -9905,7 +9905,7 @@ h6,
 .back-to-top {
   position: fixed;
   display: none;
-  right: 45px;
+  right: 35px;
   bottom: 45px;
   z-index: 11;
 }
@@ -9917,7 +9917,7 @@ h6,
   height: 50%;
   top: 0;
   left: 0;
-  background: #ffffff;
+  background: white;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -10180,8 +10180,7 @@ h6,
   list-style-type: none;
 }
 #education {
-  padding: 50px 15px 20px 15px;
-  border-bottom: 1px solid #dcd9d9;
+  padding: 20px 15px 20px 15px;
   text-align: center;
 }
 #education h2 {
@@ -10221,7 +10220,7 @@ h6,
   padding: 0 0 0 15px;
 }
 #skills {
-  padding: 50px 15px;
+  padding: 20px 15px;
   text-align: center;
 }
 #skills h2 {
@@ -10243,4 +10242,59 @@ h6,
   list-style: none;
   cursor: default;
   font-size: 1.2em;
+}
+#about {
+  padding: 50px 15px;
+  border-bottom: 1px solid #dcd9d9;
+  text-align: center;
+}
+#projects {
+  padding: 20px 15px;
+  text-align: center;
+}
+#projects h2 {
+  color: #374054;
+  margin-bottom: 50px;
+}
+.project {
+  position: relative;
+  max-width: 900px;
+  margin: 0 auto 30px auto;
+  overflow: hidden;
+  background: #fff;
+  border-radius: 4px;
+  padding: 0;
+}
+.project-image {
+  float: left;
+}
+.project-info {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 300px;
+  padding: 15px;
+}
+.project-info h3 {
+  font-size: 1.5em;
+  font-weight: 300;
+  color: #374054;
+  margin: 0 0 15px 0;
+}
+.project-info p {
+  color: #74808a;
+  margin: 0 0 15px 0;
+  font-size: 0.9em;
+}
+.no-image .project-info {
+  position: relative;
+  margin: 0;
+  padding: 30px 15px;
+  transform: none;
+}
+#more-projects {
+  display: none;
+}
+.shadow-large {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
